<resources>
    <string name="app_name">Just Java</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="hot_beverage">Hot beverage</string>
    <string-array name="hot_beverage_arrays">
        <item>Coffee</item>
        <item>Espresso</item>
        <item>Americano</item>
        <item>Latte</item>
        <item>Cappuccino</item>
        <item>Belgian Hot chocolate</item>
        <item>Tea latte</item>
        <item>Chai latte</item>
        <item>Matcha latte</item>
        <item>Classic apple cider</item>
    </string-array>

    <!-- Header text for the list of toppings [CHAR LIMIT=20] -->
    <string name="order_subject">JustJava order for: </string>
    <string name="name">Name: </string>
    <string name="add_whipped_cream">Add whipped cream? </string>
    <string name="add_chocolate">Add chocolate? </string>
    <string name="order_quantity">Quantity: </string>
    <string name="total">Total: $</string>
    <string name="thank_you">Thank you!</string>
</resources>
