<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.justjava.MainActivity">
    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="16dp">
            <EditText
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter your name"
                android:inputType="textCapWords" />
            <TextView
                style="@style/HeaderTextStyle"
                android:text="@string/toppings"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                />
            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/hot_beverage_arrays"
                android:prompt="@string/hot_beverage" />

            <CheckBox
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/add_whipped_cream"
                 android:text="@string/whipped_cream"
                 android:textSize="16sp"
                 android:textAppearance="?android:textAppearanceMedium"
                 android:paddingLeft="24dp"/>
            <CheckBox
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/add_chocolate"
                 android:text="@string/chocolate"
                 android:textSize="16sp"
                 android:textAppearance="?android:textAppearanceMedium"
                 android:paddingLeft="24dp"/>
            <TextView
                style="@style/HeaderTextStyle"
                android:text="@string/quantity"
                android:paddingBottom="16dp"
                />
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:layout_height="48dp"
                        android:layout_width="48dp"
                        android:text="-"
                        android:textStyle="bold"
                        android:onClick="decrement"/>

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="2"
                        android:textColor="@android:color/black"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:id="@+id/quantity_text_view"/>
                    <Button
                        android:layout_height="48dp"
                        android:layout_width="48dp"
                        android:text="+"
                        android:textStyle="bold"
                        android:onClick="increment"/>
                </LinearLayout>

            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/order"
                android:textStyle="bold"
                android:onClick="submitOrder"
                android:layout_marginTop="16dp"
                />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
